--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="theme-color" content="#1976d2">
+  <meta name="description" content="Nayborly - Your Neighborhood Marketplace">
+  <meta name="keywords" content="Nayborly, Marketplace, Neighborhood, Community, Local">
+  <meta name="author" content="Rolling Cat Software">
+  <meta name="robots" content="index, follow">
+  <meta name="google-site-verification" content="your-google-site-verification-code">
   <title>Nayborly</title>
   <base href="/">
   <meta content="width=device-width, initial-scale=1" name="viewport">
-  <link href="/favicon.ico" rel="icon" type="image/x-icon">
+  <link href="/favicon.svg" rel="icon" type="image/x-icon">
 </head>
 <body>
 <app-root></app-root>
