First phase of pages are mostly completed.

--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#1976d2">
-  <meta name="description" content="Nayborly - Your Neighborhood Marketplace">
-  <meta name="keywords" content="Nayborly, Marketplace, Neighborhood, Community, Local">
-  <meta name="author" content="Rolling Cat Software">
-  <meta name="robots" content="index, follow">
-  <meta name="google-site-verification" content="your-google-site-verification-code">
+  <meta content="width=device-width, initial-scale=1" name="viewport">
+  <meta content="#1976d2" name="theme-color">
+  <meta content="Nayborly - Your Neighborhood Marketplace" name="description">
+  <meta content="Nayborly, Marketplace, Neighborhood, Community, Local" name="keywords">
+  <meta content="Rolling Cat Software" name="author">
+  <meta content="index, follow" name="robots">
+  <meta content="your-google-site-verification-code" name="google-site-verification">
   <title>Nayborly</title>
   <base href="/">
   <meta content="width=device-width, initial-scale=1" name="viewport">
